# Music-classification

./: .gitignore  README.md  download_dataset.sh  pyproject.toml  setup.bat  setup.sh
src/: data.py  datautil.py  main.ipynb  main.py  model.py  paths.py  train.py  visual.py
