[project]
name = "music-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
